# transtokenizer

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  makefile  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
docs/: api.md  installation.md  usage.md
notebooks/: compute_mapping_tfa.ipynb  create_wechsel_mapping.ipynb  download_oscar.ipynb  remap_embeddings_v3.py  train_spm_tokenizer.py  weschel_dutch.ipynb
notebooks/export/alignments/: translation-table.en-nl.tsv
scripts/: calculate_ppl.py  calculate_ppl_MaLA.py  create_llama3_model.py
tests/: __init__.py  test_tiktotok.py
tiktotok/: __init__.py
transtokenizer/: __init__.py
transtokenizers/: __init__.py  transtokenizers.py
